$Id: /xmltwig/trunk/Changes 33 2008-04-30T08:03:41.004487Z mrodrigu  $

CHANGES

version 3.36
date:
# minor maintenance release
added: can use the tag[nested] form in twig handlers that
       triggers on elements 'tag' that include a child 'nested'

version: 3.35
date: 2010-05-15
# minor maintenance release
added: the by_file option to xml_grep that limits
       the number of hits per file
added: allowed the text of ignored elements to be buffered
       in a string
fixed: comments need to be escaped (you can't have 2 '-' in a
       row), RT#57389 spotted by Konstantin Tchernov
       https://rt.cpan.org/Ticket/Display.html?id=57389
fixed: after $elt->cut_children, $elt->empty is false RT#54570
       spotted and patched by Andrew Pimlott
       https://rt.cpan.org/Ticket/Display.html?id=54570

fixed: documented the fact that latin1 is ISO-8859-15, see RT#37431
       https://rt.cpan.org/Ticket/Display.html?id=37431


version: 3.34
date: 2010-01-18
# minor maintenance release, test suite fixes
fixed: tests failed when XML::XPath was used as the XPath engine

version: 3.33
date: 2010-01-15
# minor maintenance release, bug fixes
added: XML::Twig::Elt method att_exists which returns true if the attribute
       exists in the XML
added: XML::Twig::Elt method lc_attnames which lower cases the names
      of all the attribute of the element
added: better error message if find_nodes or get_xpath are called instead
      of findnodes when using XML::Twig::XPath (suggested by Zed Pobre)
added: indented_close_tag pretty_print option (suggested by H.Merijn Brand)
added: RT #49692 xml_split test on win 32 systems. Patch sent through RT 
       http://rt.cpan.org/Ticket/Display.html?id=49692
added: using position selector (eg foo[2]) in handler triggers now raises 
      an error, spotted by Selvakumar
added: you can use css like selectors for class in navigation: 'p.title' will
      select p elements with a class that contains title. 